--- a/puper/frontend/src/pages/MapPage.css
+++ b/puper/frontend/src/pages/MapPage.css
@@ -400,7 +400,7 @@
   font-family: 'Bebas Neue', cursive;
   font-size: 1.1rem;
   font-weight: bold;
-  color: var(--psychedelic-lime);
+  color: rgb(rgb(0, 255, 200)); 
   min-width: 30px;
 }
 
